fixing overflow of header fom contact page

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -86,6 +86,10 @@
         flex-direction: column;
     }
 
+    .contact {
+        font-size: 5.1rem !important;
+    }
+
     .contact-right {
         width: 100%;
     }
